src/assets/scss/_cart.scss
// Cart Specific Styles
.giftsum-actions {
  text-align: left;
  width: 20%;
  .btn-giftsum-action {
    color: inherit;
    padding-bottom: 0;
    padding-top: 0;
    @include respond-to(extrasmall) {
      border-radius: 3px;
      border: 1px solid #ccc;
      background: #eee;
      margin-right: 8px;
    }
  }  
}


.giftsum-table {
  margin-bottom: 0;
  thead {
    @include respond-to(extrasmall) {
      display: none;
    }
    tr {
      th {
        border-bottom-color: $colorCru-border;
        font-size: .9em;
        text-transform: uppercase;
        font-weight: 200;
      }
    }
  }

  .giftsum-gift-row {
    @include respond-to(extrasmall) {
      display: block;
      border-top: 2px solid $colorCru-border;
      padding-top: 1em;
      margin-top: 1em;
      &:first-child {
        margin-top: 0;
      }
    }
    td {
      padding-top: 30px;
      padding-bottom: 30px;
      border-bottom: 2px solid $colorCru-border;
      @include respond-to(extrasmall) {
        display: block;
        width: 100%;
        border: none;
        padding: 0;
      }
    }
    .giftsum-profile {
      width: 90px;
      height: auto;
      margin-right: 15px;
      @include respond-to(extrasmall) {
        display: none;
      }
    }
    .giftsum-title {
      display: block;
      @include respond-to(extrasmall) {
        display: inline-block;
      }
    }
    .giftsum-detail {
      color: $colorGrayscale-slate;
      display: block;
      font-size: .75em;
      font-family: $data-font;
      @include respond-to(extrasmall) {
        display: inline-block;
      }
    }
    .giftsum-actions {
      font-size: .8em;
      text-transform: uppercase;
      @include respond-to(extrasmall) {
        text-align: left;
        .sep {
          display: none;
        }
      }
    }
    .giftsum-about {
      font-family: $data-font;
    }
  }
  tfoot {
    tr {
      @include respond-to(extrasmall) {
        display: block;
        width: 100%;
        border: none;
      }
      td {
        padding-top: 40px;
        vertical-align: middle;
        @include respond-to(extrasmall) {
          display: block;
          width: 100%;
          border: none;
          padding-top: 8px;
          text-align: center;
        }
      }
      .checkout-cta {
        margin-left: $gutter;
        @include respond-to(extrasmall) {
          padding-top: 0;
          margin-left: 0;
        }
      }
    }
  }
  .giftsum-line {
    display: block;
    line-height: 1.5em;
    strong {
      font-family: $data-font;
    }
  }
}

.giftsum-table-cart {
  .th-title-amount {
    font-size: 14px;
  }
  .td-frequency {
    text-align: right;
    font-size: 14px;
  }
  .giftsum-gift-row {
    td {
      padding-top: 15px;
      padding-bottom: 15px;
    }
    .giftsum-about {
      font-weight: bold;
    }
  }
  .giftsum-line {
    font-size: 16px;
  }
  tfoot {
    tr {
      td {
        padding-top: 15px;
      }
    }
  }
}



@media screen and (max-width: 549px) {
    .btn-block-xs {
        display: block;
        width: 100%;
        &.btn-default {margin-bottom: 10px;}
    }
}

